fixed image overlapping when collapse

--- a/styles/_intro.scss
+++ b/styles/_intro.scss
@@ -126,6 +126,7 @@
           margin: 0;
           margin-top: 2em;  
           width: 100%;
+          height: 90vh;
           padding-bottom: 4em;
         } 
   }
@@ -193,8 +194,14 @@
       -moz-transition: opacity 0.5s ease-in-out;
       -o-transition: opacity 0.5s ease-in-out;
       transition: opacity 0.5s ease-in-out;
+      @include intro {
+        position: absolute;
+      } 
     }
 
     #change img.crossImg:hover {
       opacity: 0;
+      @include intro {
+        opacity: 0;
+      } 
     }
